# uist-diversity

./: README.md  pyproject.toml  wrangling.ipynb
data/raw_author_data/: uist2015_ adjuncts.csv  uist2015_proceedings.csv  uist2016_adjuncts.csv  uist2016_proceedings.csv  uist2017_adjuncts.csv  uist2017_proceedings.csv  uist2018_adjuncts.csv  uist2018_proceedings.csv  uist2019_proceedings.csv  uist2020_proceedings.csv  uist2021_proceedings.csv
