[tool.poetry]
name = "uist-diversity"
version = "0.1.0"
description = "Data and analysis for analyzing UIST author demographics, 2015-2021"
authors = ["Eunice Jun (emjun@cs.washington.edu)"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.3"
jupyter = "^1.0.0"
ipykernel = "^6.4.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
